web-infras/parser/tests/fixtures/babel/es2015/let/let-as-identifier-strict-fail/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,1)
2|let + 1
 |^
